@@ -82,11 +82,14 @@ public:
 		NPC_VOICE = 48,
 		NPC_DIALOG_TOPIC = 49,
 		NPC_DIALOG_GROUP = 50,
-		NPC_ALLOW_MOVEMENT = 51,
-		NPC_PORTRAIT_THEM = 52,
-		NPC_PORTRAIT_YOU = 53,
-		QUEST_TEXT = 54,
-		WAS_INSIDE_EVENT_AREA = 55
+		NPC_DIALOG_ID = 51,
+		NPC_DIALOG_RESPONSE = 52,
+		NPC_DIALOG_RESPONSE_ONLY = 53,
+		NPC_ALLOW_MOVEMENT = 54,
+		NPC_PORTRAIT_THEM = 55,
+		NPC_PORTRAIT_YOU = 56,
+		QUEST_TEXT = 57,
+		WAS_INSIDE_EVENT_AREA = 58
 	};
 
 	int type;
